--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.1",
-		"webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "bootstrap": "^5.3.1"
   }
 }
