--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "i18next": "^23.5.1",
     "on-change": "^4.0.2",
