--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,5 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm ci
-      - run: rm -rf dist
-      - run: NODE_ENV=production npx webpack
+      - run: npx eslint
